# blosc2-openzl

./: .gitignore  ANNOUNCE.md  CMakeLists.txt  LICENSE  README-DEVELOPERS.md  README.md  RELEASE_NOTES.md  RELEASING.rst  pyproject.toml  requirements-test.txt  setup.py
.github/workflows/: cibuildwheels.yml
bench/: encode-blocking.py  requirements.txt
blosc2_openzl/: __init__.py
examples/: params.py  roundtrip.py
src/: CMakeLists.txt  blosc2_openzl.c  blosc2_openzl.h  blosc2_openzl_public.h  roundtrip.c  test_openzl.c
tests/: test_def_params.py  test_jp2.py  test_meta.py
